--- a/4-DOM-pig-game/starter/style.css
+++ b/4-DOM-pig-game/starter/style.css
@@ -119,6 +119,10 @@ button, input {
     transition: background-color 0.3s, color 0.3s;
 }
 
+input {
+    text-align: center;
+}
+
 button:hover { font-weight: 600; }
 button:hover i { margin-right: 20px; }
 
@@ -138,21 +142,28 @@ i {
 }
 
 .btn-new { top: 45px;}
-.btn-roll { top: 403px;}
-.btn-hold { top: 467px;}
-.score-input { top: 525px;}
+.btn-roll { top: 375px;}
+.btn-hold { top: 420px;}
+.score-input { top: 470px;}
 .btn-score { 
-    top: 80px;
-    background-color: aqua;
+    top: 520px;
+    background-color: #EB4D4D;
 }
 
-.dice {
+.dice-0, .dice-1 {
     position: absolute;
     left: 50%;
     top: 178px;
-    transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+
+.dice-0 { 
+    transform: translateX(-100px);
+}
+
+.dice-1 {
+    transform: translateX(10px);
 }
 
 .winner { background-color: #f7f7f7; }
